[package]
name = "eth_streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.18", features= ["blocking", "json"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = "2.0"
web3 = "0.18.0"
clap = { version = "4.3.3", features = ["derive"] }
tokio-postgres = "0.7.8"


[lib]
name = "eth_streamer"
path = "src/main.rs"
